driver home page and driver ride request page.